--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="La gestión digital de tu comunidad de vecinos">
   <title>Mi comunidad favorita</title>
 </head>
 
